checkpoint: guiwindow pops up, now working on content

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -1,4 +1,6 @@
 {
     "container.filter": "Filter",
-    "container.filter_spec": "Filter Spec"
+    "container.filter_spec": "Filter Spec",
+    "philter.filter.mode.only_same": "Only Same",
+    "philter.filter.mode.matches": "Matches"
 }
