add mode button to gui dialog

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -1,6 +1,5 @@
 {
-    "container.filter": "Filter",
-    "container.filter_spec": "Filter Spec",
+    "philter.filter.name": "Filter",
     "philter.filter.mode.only_same": "Only Same",
     "philter.filter.mode.matches": "Matches"
 }
