checkpoint: scrolling screen is tiny, urgh...

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -1,5 +1,5 @@
 {
     "philter.filter.name": "Filter",
-    "philter.filter.mode.only_same": "Only Same",
+    "philter.filter.mode.no_new": "No New",
     "philter.filter.mode.matches": "Matches"
 }
