make text/font related values in layout looked up at the last minute.

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -2,5 +2,6 @@
     "philter.filter.name": "Filter",
     "philter.filter.mode.only_same": "Only Same",
     "philter.filter.mode.matches": "Matches",
+    "philter.filter_mode.matches_alt": "Match Specification",
     "philter.save": "Save"
 }
