Put filter dialog on the side to have more space

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -3,5 +3,7 @@
     "philter.filter.mode.only_same": "Only Same",
     "philter.filter.mode.matches": "Matches",
     "philter.filter_mode.matches_alt": "Match Specification",
-    "philter.save": "Save"
+    "philter.save": "Save",
+    "philter.exact": "Exact",
+    "philter.general": "General"
 }
