clean up some unused code from rearranging

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -4,6 +4,5 @@
     "philter.filter.mode.matches": "Matches",
     "philter.filter_mode.matches_alt": "Match Specification",
     "philter.save": "Save",
-    "philter.exact": "Exact",
-    "philter.general": "General"
+    "philter.exact": "Exact"
 }
