add 'exact' to  filter state

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -2,6 +2,7 @@
     "philter.filter.name": "Filter",
     "philter.filter.mode.only_same": "Only Same",
     "philter.filter.mode.matches": "Matches",
+    "philter.filter.mode.none": "None",
     "philter.filter_mode.matches_alt": "Match Specification",
     "philter.save": "Save",
     "philter.exact": "Exact"
