--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -1,9 +1,16 @@
 {
-    "philter.filter.name": "Filter",
-    "philter.filter.mode.only_same": "Only Same",
-    "philter.filter.mode.matches": "Matches",
-    "philter.filter.mode.none": "None",
-    "philter.filter_mode.matches_alt": "Match Specification",
-    "philter.save": "Save",
-    "philter.exact": "Exact"
+  "philter.filter.name": "Filter",
+  "philter.filter.mode.only_same": "Only Same",
+  "philter.filter.mode.matches": "Matches",
+  "philter.filter.mode.none": "None",
+  "philter.filter.mode.tooltip": "Set sorting mode",
+  "philter.filter.mode.none.tooltip": "Matching disabled",
+  "philter.filter.mode.only_same.tooltip": "Matches things already in the target",
+  "philter.filter.mode.matches.tooltip": "Tags or regular expressions for matches",
+  "philter.filter_mode.matches_alt": "Match Specification",
+  "philter.filter.save": "Save",
+  "philter.save.tooltip": "Save changes to matches",
+  "philter.filter.exact": "Exact",
+  "philter.filter.exact.tooltip.true": "Exact matches only, including nbt",
+  "philter.filter.exact.tooltip.false": "Same type matches"
 }
