Trying to get sample slots working, it seems to allow clicking on the slots and the debugger seems to show it working correctly, but nothing actually happens: Clicking has no effect in the end.

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -1,13 +1,15 @@
 {
   "philter.filter.name": "Filter",
-  "philter.filter.mode.same_as": "Same As",
-  "philter.filter.mode.matches": "Match",
-  "philter.filter.mode.none": "None",
   "philter.filter.mode.tooltip": "Set sorting mode",
-  "philter.filter.mode.none.tooltip": "Matching disabled",
+  "philter.filter.mode.same_as": "Same As",
   "philter.filter.mode.same_as.tooltip": "Match things already in the target",
+  "philter.filter.mode.matches": "Match",
   "philter.filter.mode.matches.tooltip": "Tag or regular expression",
   "philter.filter_mode.matches_alt": "Match Specification",
+  "philter.filter.mode.none": "None",
+  "philter.filter.mode.none.tooltip": "Matching disabled",
+  "philter.filter.mode.examples": "By Example",
+  "philter.filter.mode.examples.tooltip": "Match from examples",
   "philter.filter.save": "Save",
   "philter.filter.save.tooltip": "Save changes to matches",
   "philter.filter.exact": "Exact",
@@ -17,5 +19,6 @@
   "philter.filter.any": "Any of",
   "philter.filter.any.tooltip": "Filter accepts any match",
   "philter.filter.all": "All of",
-  "philter.filter.all.tooltip": "Filter only accepts if all match"
+  "philter.filter.all.tooltip": "Filter only accepts if all match",
+  "philter.filter.examples": "If no examples are here, the target container's items will be the examples."
 }
