Add missing text

--- a/src/main/resources/assets/philter/lang/en_us.json
+++ b/src/main/resources/assets/philter/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "philter.filter.name": "Filter",
+  "block.philter.filter": "Filter",
 
   "philter.filter.mode.tooltip": "Set sorting mode",
 
